# library-management

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-backend.yml
apps/backend/: package.json  pyproject.toml
backend/: .env.example  Dockerfile  README.md  dev.py  entrypoint.sh  package.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  rbac.py  utils.py
backend/app/auth/: models.py  views.py
backend/app/books/: models.py  views.py
backend/app/borrow/: models.py  schemas.py  views.py
backend/app/borrowed/: models.py  schemas.py  views.py
backend/app/dashboard/: views.py
backend/app/returned/: models.py  schemas.py  views.py
backend/app/users/: models.py  schemas.py  views.py
backend/app/vars/: models.py  schemas.py  views.py
backend/migrations/versions/: 0276a0643b02_.py  0658c6eabfea_fix_cascade.py  0da18271996c_add_created_at_to_book.py  12eecb67b186_recreate_migration_for_postgre.py  42b7603cc6f6_add_in_table.py  7022f3ea4171_update_borrow_book.py  7c22720e6a45_add_due_date.py  7cbb054b8ea7_add_to_table.py  7ef942a3c853_add_system_variable.py  997b228c55ec_create_table_borrowed_book.py  a614ee633435_.py  b44ac56ca9b3_make_borrow_dates_nullable.py  c666fefeee4a_initial_migration.py  cfb3cfe8c0bc_add_model_returnedbook.py  dedd1526451b_change_superuser_to_superadmin.py  fd0c0d65066d_fix_cascade_book_user.py
frontend/: Dockerfile  next.config.mjs  nginx.conf  package.json  tailwind.config.ts
frontend/src/: constants.ts  env.mjs  types.ts
(+47 files in other folders)
