[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nurliman <nurlimandiara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
dataclasses-json = "^0.6.3"
python-dotenv = "^1.0.1"
schema = "^0.7.5"
flask-cors = "^4.0.0"
python-dateutil = "^2.8.2"
github-flask = "^3.2.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
